data/raw_logs/lexical/lex_24.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_24.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_24.c:1:22: error: invalid suffix 'xG' on integer constant
    1 | int main() { int x = 0xG; }
      |                      ^~~
